fixed x overflow

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ html,
 body{
   font-family: "Sen", sans-serif;
   overflow-x: hidden;
-  max-width: 100%
+  max-width: 100%;
 }
 
 
